snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220817.141111-2-sources.jar.sha512
e14f1d46c860af87b06afcc59847d4807dc436bf8df98433bb28f5a3a3009b80948f12c78dcda7e918d75410f94e2321266a024566f86caf285f6d19a3a28a22